Navigation Bar Added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,43 +5,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
     android:animateLayoutChanges="true"
     android:background="@drawable/ic_bg"
     tools:context=".LoginActivity">
-
     <RelativeLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true">
-
+        android:layout_height="match_parent" >
         <ImageView
-            android:id="@+id/logo"
-            android:layout_width="296dp"
-            android:layout_height="904dp"
+            android:id="@+id/brand_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/registerLink"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_marginStart="57dp"
             android:layout_marginLeft="57dp"
             android:layout_marginTop="-175dp"
             android:layout_marginEnd="58dp"
             android:layout_marginRight="58dp"
-            tools:srcCompat="@drawable/ic_hs5_logo_white" />
-
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_hs5_logo_white" />
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/etEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/brand_logo"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="433dp"
-            android:layout_marginEnd="84dp"
-            android:layout_marginRight="84dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="-340dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
             android:background="@drawable/border"
             android:drawableStart="@drawable/ic_action_email"
             android:drawableLeft="@drawable/ic_action_email"
@@ -51,18 +55,21 @@
             android:padding="10dp"
             android:textColorHint="#FFF"
             android:visibility="visible" />
-
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/etPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/etEmail"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginEnd="87dp"
-            android:layout_marginRight="87dp"
-            android:layout_marginBottom="307dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginEnd="80dp"
+            android:layout_marginRight="80dp"
             android:background="@drawable/border"
             android:drawableStart="@drawable/ic_action_password"
             android:drawableLeft="@drawable/ic_action_password"
@@ -72,24 +79,27 @@
             android:padding="10dp"
             android:textColorHint="#FFF"
             android:visibility="visible" />
-
         <Button
-            android:id="@+id/button"
+            android:id="@+id/bSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/etPassword"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="179dp"
-            android:layout_marginLeft="179dp"
-            android:layout_marginBottom="223dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="25dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginEnd="120dp"
+            android:layout_marginRight="120dp"
             android:background="@drawable/custom_button"
             android:padding="10dp"
             android:text="Sign In"
             android:textColor="#FFF" />
-
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/registerLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
